# reachy-mini-skills

./: CONTRIBUTING.md  README.md  pyproject.toml
src/reachy_mini_skills/: __init__.py  api_utils.py  app.py  config.py  conversation.py
src/reachy_mini_skills/actuation/: __init__.py
src/reachy_mini_skills/actuation/motion/: __init__.py  controller.py  emotions.py  face_tracking.py
src/reachy_mini_skills/actuation/speech/: __init__.py  tts_base.py  tts_cartesia.py  tts_unmute.py
src/reachy_mini_skills/llms/: __init__.py  base.py  cerebras.py  huggingface.py  ollama.py
src/reachy_mini_skills/perception/: __init__.py
src/reachy_mini_skills/perception/audio/: __init__.py  io.py  stt_base.py  stt_cartesia.py  stt_unmute.py  stt_whispersocket.py  vad.py
src/reachy_mini_skills/perception/vision/: __init__.py  visual_input.py  vl_ollama.py
tests/: __init__.py  conftest.py  run_tests.py  test_config.py  test_llm.py  test_motion.py  test_stt.py  test_tts.py
